<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user"></TextView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblUserLogeado"></TextView>

</LinearLayout><TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/estado"></TextView><LinearLayout android:id="@+id/LinearLayout03" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/estadoCoop"></TextView>
<ToggleButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnHabilitado" android:text="@string/habilitado" android:layout_gravity="right" android:textOff="@string/inhabilitado" android:textOn="@string/habilitado"></ToggleButton></LinearLayout><LinearLayout android:id="@+id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/estadoVenc"></TextView><ToggleButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inhabilitado" android:id="@+id/btnInhabilitado" android:layout_gravity="right" android:textOff="@string/inhabilitado" android:textOn="@string/habilitado"></ToggleButton>
</LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_height="wrap_content" android:layout_width="fill_parent">








</LinearLayout>
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btnRealizarReserva" android:id="@+id/btnRealizarReserva"></Button>
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btnCancelarReserva" android:id="@+id/btnCancelarReserva"></Button>
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btnListadoReservas" android:id="@+id/btnListadoReservas"></Button>
<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/btnListadoVencimientos" android:id="@+id/btnListadoVencimientos"></Button>



</LinearLayout>