<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user"></TextView>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/lblUserLogeado"></TextView>
</LinearLayout><TextView android:id="@+id/TextView01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/buscar"></TextView><EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/txtAbuscar"></EditText>
<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_gravity="right" android:orientation="vertical" android:layout_width="fill_parent"><Button android:layout_height="wrap_content" android:text="@string/btnBuscar" android:id="@+id/btnBuscar1" android:layout_width="fill_parent"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnBusquedaAvanzada" android:text="@string/btnBusquedaAvanzada" android:layout_gravity="right"></Button>


</LinearLayout>


</LinearLayout>